# pixel-bot-maker

./: .gitignore  BUGS.md  CHANGELOG.md  FEATURES.md  README.md  automation.py  create_placeholder.py  image_analyzer.py  main.py  pyproject.toml  requirements.txt  screen_capture.py  settings_manager.py  testbed.py
pixel_bot/: main.py
pixel_bot/core/: exceptions.py  execution_engine.py  preview_engine.py  script_validator.py  template_manager.py  validation_result.py  validation_rules.py  variable_manager.py
pixel_bot/gui/: dialogs.py  main_window.py  preview_dialog.py  preview_overlay.py  step_editor.py  validation_widgets.py  window_selector.py
pixel_bot/templates/: README.md  template_manifest.json
pixel_bot/templates/gaming/: basic_clicker.json  conditional_loop.json
pixel_bot/templates/productivity/: data_extractor.json  form_filler.json
pixel_bot/templates/testing/: image_hunter.json
pixel_bot/utils/: automation.py  cache.py  font_manager.py  image_analyzer.py  logger.py  screen_capture.py
templates/: test.json
tests/: test_automation.py
